change editor button input font size to 16px to stop the focus auto-zoom on iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -610,6 +610,7 @@ button#addToLayoutsBtn:active {
    text-align: center;
    border: 1px solid #767676;
    font-family: monospace;
+   font-size: 16px;
 }
 
 .editor-button input[type=text]:focus {
